--- a/Customecss/Style.css
+++ b/Customecss/Style.css
@@ -3,6 +3,10 @@
     margin: 0%;
 }
 
+/*********
+ Header-sate 
+   ***********/
+
 .header-Bac {
     width: 100%;
     height: 100vh;
@@ -12,36 +16,90 @@
 
 
 }
-.hed-alaing{
+
+.hed-alaing {
     text-align: right;
 }
-.header-text{
+
+.header-text {
 
     font-weight: bold;
-   
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size:45px;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 45px;
     padding: 155px;
     padding-bottom: 0%;
 
 }
-#hed-pra{
-   
+
+#hed-pra {
+
     padding-right: 155px;
-    color:#444343;
+    color: #444343;
 
-    
+
+
+}
+
+#hed-btn {
+    margin-right: 158px;
+    padding: 15px 20px;
+    border-radius: 4px;
+    background-color: #F15B22;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    color: wheat;
 
 }
 
-#hed-btn{
-margin-right: 158px;
-padding:15px 20px;
-border-radius:4px;
-background-color:#F15B22;
-border: none;
-cursor: pointer;
-font-weight: bold;
-color: wheat;
+
+/********************
+ Header-end 
+           *************/
+
+
+/****************
+                 Main-state 
+           *************/
+
+/************************
+            previous-year-state
+             *******************/
+.previous-year {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 
 }
+
+#unol {
+    list-style: none;
+}
+
+/************************
+            previous-year-end
+             *******************/
+
+
+/********************* 
+my plans-State 
+*********************/
+
+.myPlans-hed {
+    display: grid;
+    gap: 80px;
+    grid-template-columns: auto auto ;
+    text-align: center;
+}
+
+
+
+/********************* 
+my plans-end 
+*********************/
+
+/*******************
+           
+            main-end 
+                    ***************/
