--- a/Customecss/Style.css
+++ b/Customecss/Style.css
@@ -99,6 +99,38 @@ my plans-State
 my plans-end 
 *********************/
 
+/* background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0.00) 100%); */
+/*****************
+ gardianPic_body_state
+  ***********************/
+.gardianPic_body{
+    margin: 50px auto;
+    background-image:linear-gradient( 90deg,#c60b1b99,Transparent),url("/images/watch.png");
+    width: 1140px;
+    height: 250px;
+    border-radius:9px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.img-body-btn{
+    padding: 10px 20px;
+    border-radius: 5px ;
+    border: none;
+    color: #1159df;
+    font-weight: bold;
+    font-size:medium;
+}
+
+#size-img-text{
+    padding:65px;
+}
+/*****************
+ gardianPic_body-End
+  ***********************/
+
+
+
 /*******************
            
             main-end 
