--- a/Customecss/Style.css
+++ b/Customecss/Style.css
@@ -89,7 +89,7 @@ my plans-State
 .myPlans-hed {
     display: grid;
     gap: 80px;
-    grid-template-columns: auto auto ;
+    grid-template-columns: auto auto;
     text-align: center;
 }
 
@@ -103,28 +103,29 @@ my plans-end
 /*****************
  gardianPic_body_state
   ***********************/
-.gardianPic_body{
+.gardianPic_body {
     margin: 50px auto;
-    background-image:linear-gradient( 90deg,#c60b1b99,Transparent),url("/images/watch.png");
+    background-image: linear-gradient(90deg, #c60b1b99, Transparent), url("/images/watch.png");
     width: 1140px;
     height: 250px;
-    border-radius:9px;
+    border-radius: 9px;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.img-body-btn{
+.img-body-btn {
     padding: 10px 20px;
-    border-radius: 5px ;
+    border-radius: 5px;
     border: none;
     color: #1159df;
     font-weight: bold;
-    font-size:medium;
+    font-size: medium;
 }
 
-#size-img-text{
-    padding:65px;
+#size-img-text {
+    padding: 65px;
 }
+
 /*****************
  gardianPic_body-End
   ***********************/
@@ -135,3 +136,30 @@ my plans-end
            
             main-end 
                     ***************/
+
+
+/*****************
+                     Footer-State 
+                     ******************************/
+.footer-mainDev{
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 120px 0px;
+    padding: 80px 0px;
+
+}
+
+#footer-btn{
+    padding: 15px 20px;
+    border-radius: 4px;
+    background-color: #F15B22;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    color: wheat;
+}
+/*****************
+                     Footer-end 
+                     ******************************/
